# nautobot-app-welcome-wizard

./: .cookiecutter.json  .coveragerc  .dockerignore  .flake8  .gitignore  .readthedocs.yaml  .travis.yml  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  upstream_testing.yml
changes/: 100.housekeeping  103.housekeeping  107.fixed  112.added  115.fixed  123.fixed  127.fixed  128.added  129.added  131.fixed  136.housekeeping  137.housekeeping  139.housekeeping  152.housekeeping  163.documentation  164.housekeeping  381.changed  381.removed
development/: .dockerignore  Dockerfile  creds.env.example  dev.env  development.env  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.docs.yml  docker-compose.mysql.yml  docker-compose.postgres.yml  docker-compose.yml  nautobot_config.py  towncrier_template.j2
docs/: dashboard.md  git_datasource.md  import_wizard.md  index.md  middleware.md  requirements.txt
docs/admin/: compatibility_matrix.md  install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: version_1.0.md  version_1.1.md  version_2.0.md  version_2.1.md  version_2.2.md  version_3.0.md
docs/dev/: contributing.md  dev_environment.md  release_checklist.md
docs/dev/code_reference/: api.md  package.md
docs/models/: manufacturerimport.md
docs/user/: app_getting_started.md  app_overview.md  app_use_cases.md  git_datasource.md  import_wizard.md
merlin/: __init__.py  admin.py  datasources.py  filters.py  forms.py  jobs.py  middleware.py  models.py  navigation.py  signals.py  tables.py  urls.py  views.py
merlin/api/: __init__.py  serializers.py  urls.py  views.py
merlin/migrations/: 0001_initial.py  0002_devicetypeimport_manufacturerimport.py  0002_merlin_meta.py  0003_merlin_sites.py  0004_auto_20210422_1649.py  0005_auto_20210422_1905.py
merlin/models/: __init__.py  importer.py  merlin.py
merlin/templates/merlin/: dashboard.html  devicetype.html  home.html  import.html  manufacturer.html  merlindashboard.html
merlin/tests/: __init__.py  test_api.py  test_basic.py  test_datasources.py  test_filters.py  test_forms.py  test_models.py  test_views.py
welcome_wizard/: __init__.py  admin.py  banner.py  datasources.py  filters.py  forms.py  jobs.py  middleware.py  models.py  navigation.py  signals.py  tables.py  urls.py  views.py
welcome_wizard/api/: __init__.py  serializers.py  urls.py  views.py
welcome_wizard/migrations/: 0001_initial.py  0002_merlin_nautobot_list_link.py  0003_auto_20210705_1912.py  0004_remove_manufacturerimport_slug.py  0005_fix_sites_and_roles_in_merlin.py  0006_alter_merlin_options.py  0007_devicetypeimageimport.py  0007_moduletypeimport.py
welcome_wizard/models/: __init__.py  importer.py  merlin.py
welcome_wizard/templates/welcome_wizard/: dashboard.html  devicetype.html  devicetypeimport.html  devicetypeimport_list.html  devicetypeimport_retrieve.html  extra_actions.html  import.html  manufacturer.html  manufacturerimport.html  manufacturerimport_list.html  manufacturerimport_retrieve.html  merlin_list.html  moduletypeimport_list.html
welcome_wizard/tests/: __init__.py  fixtures.py  test_api.py  test_api_views.py  test_basic.py  test_datasources.py  test_filter_manufacturerimport.py  test_filters.py  test_forms.py  test_jobs.py  test_model_manufacturerimport.py  test_models.py  test_views.py
welcome_wizard/tests/fixtures/device-types/: device_type_fixture1.yaml  device_type_fixture2.yaml  device_type_fixture3.yaml
welcome_wizard/tests/fixtures/module-types/: module_type_fixture1.yaml  module_type_fixture2.yaml  module_type_fixture3.yaml
